--- a/tx_site/personal/templates/personal/create_salaire.html
+++ b/tx_site/personal/templates/personal/create_salaire.html
@@ -5,5 +5,6 @@
     {% csrf_token %}
     {% include 'widgets/form.html' %}
     <button type="submit">Submit</button>
+    <a href="{% url 'personal:list' %}">Cancel</a>
 </form>
 {% endblock content %}
