--- a/tx_site/personal/templates/personal/confirm_delete_salaire.html
+++ b/tx_site/personal/templates/personal/confirm_delete_salaire.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Confirm Delete</h2>
-<p>Are you sure you want to delete {{ object }}?</p>
-<form method="post">
-    {% csrf_token %}
-    <button type="submit">Confirm</button>
-    <a href="{% url 'personal:edit' object.slug %}">Cancel</a>
-</form>
+<div>
+    <h2>Confirm Delete</h2>
+    <p>Are you sure you want to delete this salary ?</p>
+    <form method="post">
+        {% csrf_token %}
+        <button type="submit">Confirm</button>
+        <a href="{% url 'personal:edit' object.slug %}">Cancel</a>
+    </form>
+</div>
 {% endblock %}
