--- a/tx_site/personal/templates/personal/list_salaire.html
+++ b/tx_site/personal/templates/personal/list_salaire.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<style>
+    tr:hover {
+        background: rgb(201, 200, 200) !important;
+    }
+</style>
 
 <table>
     <thead>
