--- a/tx_site/personal/templates/personal/edit_salaire.html
+++ b/tx_site/personal/templates/personal/edit_salaire.html
@@ -4,8 +4,8 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {% include 'widgets/form.html' %}
-    <button type="submit">Submit</button>
-    <a href="{% url 'personal:list' %}">Cancel</a>
-    <a href="{% url 'personal:delete' object.slug %}">Delete</a>
+    <button type="submit">Valider</button>
+    <a href="{% url 'personal:list' %}">Annuler</a>
+    <a href="{% url 'personal:delete' object.slug %}">Supprimer</a>
 </form>
 {% endblock content %}
