--- a/tx_site/personal/templates/personal/create_salaire.html
+++ b/tx_site/personal/templates/personal/create_salaire.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method="post" enctype="multipart/form-data">
+<form method="post">
     {% csrf_token %}
-    {% include 'widgets/form.html' %}
+    {{ form }}
+    {% for formset in inlines %}
+    {{ formset }}
+    {% endfor %}
     <button type="submit">Submit</button>
     <a href="{% url 'personal:list' %}">Cancel</a>
 </form>
