--- a/tx_site/personal/templates/personal/edit_salaire.html
+++ b/tx_site/personal/templates/personal/edit_salaire.html
@@ -3,7 +3,10 @@
 {% block content %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {% include 'widgets/form.html' %}
+    {{ form }}
+    {% for formset in inlines %}
+    {{ formset }}
+    {% endfor %}
     <button type="submit">Valider</button>
     <a href="{% url 'personal:list' %}">Annuler</a>
     <a href="{% url 'personal:delete' object.slug %}">Supprimer</a>
