--- a/tx_site/personal/templates/personal/edit_salaire.html
+++ b/tx_site/personal/templates/personal/edit_salaire.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form }}
+    {{ form.as_p }}
     {% for formset in inlines %}
     {{ formset }}
     {% endfor %}
